Revert "Try support unsafe"
This reverts commit edeff95fd2fe7271a5cd4e26021b4a48607a4d71.