@@ -66,15 +66,8 @@ class MultiJavaForgePlugin implements Plugin<Project> {
                 javaCompiler = project.javaToolchains.compilerFor {
                     languageVersion = JavaLanguageVersion.of(25)
                 }
-                options.sourceCompatibility = '8'
-                options.targetCompatibility = '25'
+                options.release = 25
                 options.encoding = 'UTF-8'
-
-                options.compilerArgs.addAll([
-                        '--add-modules=jdk.unsupported',
-                        '--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED',
-                        '--add-exports=java.base/sun.security.util=ALL-UNNAMED'
-                ])
             }
 
             project.tasks.register('jarJava25', Jar) {
